--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="logo">
+                    <img src="logo.png" alt="Marfa Labs" class="logo-img">
                     <h1>Marfa Labs</h1>
                 </div>
                 <ul class="nav-menu">
@@ -29,10 +30,6 @@
             <div class="hero-content">
                 <h1>Building the Future of Health & Lifestyle Apps</h1>
                 <p>We're a bootstrapped product studio bringing innovation and excellence to consumer applications in health, fitness, and lifestyle categories.</p>
-                <div class="cta-buttons">
-                    <a href="#about" class="btn primary">Learn More</a>
-                    <a href="#approach" class="btn secondary">Our Approach</a>
-                </div>
             </div>
         </section>
 
