Update hero text and optimize logo
- Changed hero headline to 'Apps that improve lives'
- Replaced logo with correct desktop version
- Optimized logo sizing: 40px desktop, 36px mobile
- Enhanced logo visibility with opacity adjustment
- Improved responsive design for logo scaling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <section id="home" class="hero">
             <div class="hero-content">
-                <h1>Building the Future of Health & Lifestyle Apps</h1>
+                <h1>Apps that improve lives</h1>
                 <p>We're a bootstrapped product studio bringing innovation and excellence to consumer applications in health, fitness, and lifestyle categories.</p>
             </div>
         </section>
