Fix logo visibility and smart text background solution
- Added cache-busting to logo (v=2) to force reload
- Removed heavy black overlay (was too dark)
- Added glass-morphism text box: backdrop blur + subtle transparency
- Preserved beautiful landscape image visibility
- Smart approach: text readability without killing the aesthetic
- Updated mobile responsiveness for new design
- Much more sophisticated and elegant solution

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="logo">
-                    <img src="logo.png" alt="Marfa Labs" class="logo-img">
+                    <img src="logo.png?v=2" alt="Marfa Labs" class="logo-img">
                     <h1>Marfa Labs</h1>
                 </div>
                 <ul class="nav-menu">
